--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "flow": "flow"
   },
@@ -35,6 +35,7 @@
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-flow": "^7.0.0",
-    "flow-bin": "^0.103.0"
+    "flow-bin": "^0.103.0",
+    "jest": "^24.8.0"
   }
 }
