--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-flow": "^7.0.0",
-    "flow-bin": "^0.103.0",
-    "jest": "^24.8.0"
+    "flow-bin": "^0.103.0"
   }
 }
