--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "react-virtualized-auto-sizer": "^1.0.2",
     "resize-observer-polyfill": "^1.5.1"
   },
   "scripts": {
